@@ -4,7 +4,12 @@
 
 package CheckIn.GUI;
 
+import javax.swing.event.ChangeEvent;
 import javax.swing.table.*;
+
+import Beans.Flight.Flight;
+import Beans.Flight.SubClasses.Seat;
+import Beans.Passenger.Passenger;
 import Beans.Passenger.SubClasses.BoardingPass;
 import CheckIn.Monitor.cMonitors;
 
@@ -23,37 +28,26 @@ public class AirPassCse extends JFrame {
     }
 
     public void airlineAdd(){
-        if(!(EnterBN_3.getPsnTemp()==null)){
+        if(EnterOther_3.getPsnTemp1()==null){
             try{
-                BoardingPass boardingPass = EnterBN_3.getPsnTemp().getBoardingPass();
-                table1.setValueAt(boardingPass.getFlightNo(),2,3);
-                table1.setValueAt(boardingPass.getDeparture(),2,6);
-                table1.setValueAt(boardingPass.getDestination(),2,9);
-                table1.setValueAt(boardingPass.getETA(),2,12);
+                BoardingPass boardingPass = Objects.requireNonNull(EnterOther_3.getPsnTemp1()).getBoardingPass();
+
+                table1.setValueAt(boardingPass.getFlightNo(),2,1);
+                table1.setValueAt(boardingPass.getDeparture(),5,1);
+                table1.setValueAt(boardingPass.getDestination(),8,1);
+                table1.setValueAt(boardingPass.getETA(),11,1);
                 airLine.addItem(boardingPass.getFlightNo());
             } catch (Exception e1) {
                 e1.printStackTrace();
             }
         }
-        else if(!(EnterOther_3.getPsnTemp1()==null)) {
-            try {
-                BoardingPass boardingPass = EnterOther_3.getPsnTemp1().getBoardingPass();
-                table1.setValueAt(boardingPass.getFlightNo(),2,3);
-                table1.setValueAt(boardingPass.getDeparture(),2,6);
-                table1.setValueAt(boardingPass.getDestination(),2,9);
-                table1.setValueAt(boardingPass.getETA(),2,12);
-                airLine.addItem(boardingPass.getFlightNo());
-
-            } catch (Exception e1) {
-                e1.printStackTrace();
-            }
-        }else{
+        else{
             try{
-                BoardingPass boardingPass = EnterOther_3.getPsnTemp2().getBoardingPass();
-                table1.setValueAt(boardingPass.getFlightNo(),2,3);
-                table1.setValueAt(boardingPass.getDeparture(),2,6);
-                table1.setValueAt(boardingPass.getDestination(),2,9);
-                table1.setValueAt(boardingPass.getETA(),2,12);
+                BoardingPass boardingPass = Objects.requireNonNull(EnterOther_3.getPsnTemp1()).getBoardingPass();
+                table1.setValueAt(boardingPass.getFlightNo(),2,1);
+                table1.setValueAt(boardingPass.getDeparture(),5,1);
+                table1.setValueAt(boardingPass.getDestination(),8,1);
+                table1.setValueAt(boardingPass.getETA(),11,1);
                 airLine.addItem(boardingPass.getFlightNo());
             } catch (Exception e1) {
                 e1.printStackTrace();
@@ -68,7 +62,7 @@ public class AirPassCse extends JFrame {
         label3.setBounds(0, 0, background.getIconWidth(), background.getIconHeight());
         JPanel myPanel = (JPanel)this.getContentPane();
         myPanel.setOpaque(false);
-        this.getLayeredPane().add(label3, new Integer(Integer.MIN_VALUE));
+        this.getLayeredPane().add(label3, Integer.valueOf(Integer.MIN_VALUE));
         this.setTitle("Passenger check-in system");
         this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         this.setVisible(true);
@@ -83,19 +77,37 @@ public class AirPassCse extends JFrame {
         new ConfirmPage_3().setVisible(true);
         dispose();
     }
+
+    private void testDO(ActionEvent e) {
+        airlineAdd();
+    }
+
+    private void airLineItemStateChanged(ItemEvent e) {
+//        e.getItem();
+//        airLine.getSelectedItem();
+        if(e.getItem().equals(airLine.getSelectedItem())){
+            airlineAdd();
+        }
+    }
     private void initComponents() {
         // JFormDesigner - Component initialization - DO NOT MODIFY  //GEN-BEGIN:initComponents
-        // Generated using JFormDesigner Evaluation license - Gabirella
+        // Generated using JFormDesigner Evaluation license - Gabirella Cambridge
         ResourceBundle bundle = ResourceBundle.getBundle("Check");
         dialogPane = new JPanel();
+        panel1 = new JPanel();
         contentPanel = new JPanel();
+        menuBar1 = new JMenuBar();
         scrollPane1 = new JScrollPane();
         table1 = new JTable();
-        airLine = new JComboBox<>();
+        panel2 = new JPanel();
         buttonBar = new JPanel();
         okButton = new JButton();
         cancelButton = new JButton();
+        testDO = new JButton();
+        panel3 = new JPanel();
         label2 = new JLabel();
+        toolBar1 = new JToolBar();
+        airLine = new JComboBox<>();
 
         //======== this ========
         var contentPane = getContentPane();
@@ -105,114 +117,151 @@ public class AirPassCse extends JFrame {
         {
             dialogPane.setBorder(new EmptyBorder(12, 12, 12, 12));
             dialogPane.setOpaque(false);
-            dialogPane.setBorder (new javax. swing. border. CompoundBorder( new javax .swing .border .TitledBorder (new javax. swing. border
-            . EmptyBorder( 0, 0, 0, 0) , "JF\u006frmD\u0065sig\u006eer \u0045val\u0075ati\u006fn", javax. swing. border. TitledBorder. CENTER, javax
-            . swing. border. TitledBorder. BOTTOM, new java .awt .Font ("Dia\u006cog" ,java .awt .Font .BOLD ,
-            12 ), java. awt. Color. red) ,dialogPane. getBorder( )) ); dialogPane. addPropertyChangeListener (new java. beans
-            . PropertyChangeListener( ){ @Override public void propertyChange (java .beans .PropertyChangeEvent e) {if ("\u0062ord\u0065r" .equals (e .
-            getPropertyName () )) throw new RuntimeException( ); }} );
+            dialogPane.setBorder(new javax.swing.border.CompoundBorder(new javax.swing.border.TitledBorder(new
+            javax.swing.border.EmptyBorder(0,0,0,0), "JF\u006frmDesi\u0067ner Ev\u0061luatio\u006e",javax
+            .swing.border.TitledBorder.CENTER,javax.swing.border.TitledBorder.BOTTOM,new java
+            .awt.Font("Dialo\u0067",java.awt.Font.BOLD,12),java.awt
+            .Color.red),dialogPane. getBorder()));dialogPane. addPropertyChangeListener(new java.beans.
+            PropertyChangeListener(){@Override public void propertyChange(java.beans.PropertyChangeEvent e){if("borde\u0072".
+            equals(e.getPropertyName()))throw new RuntimeException();}});
             dialogPane.setLayout(new BorderLayout());
+
+            //======== panel1 ========
+            {
+                panel1.setLayout(new BorderLayout());
+            }
+            dialogPane.add(panel1, BorderLayout.EAST);
 
             //======== contentPanel ========
             {
-                contentPanel.setOpaque(false);
                 contentPanel.setComponentOrientation(ComponentOrientation.LEFT_TO_RIGHT);
                 contentPanel.setFont(new Font(".AppleSystemUIFont", Font.BOLD, 28));
-                contentPanel.setLayout(new GridBagLayout());
-                ((GridBagLayout)contentPanel.getLayout()).columnWidths = new int[] {0, 0, 0, 0, 0};
-                ((GridBagLayout)contentPanel.getLayout()).rowHeights = new int[] {0, 0};
-                ((GridBagLayout)contentPanel.getLayout()).columnWeights = new double[] {1.0, 0.0, 1.0, 1.0, 1.0E-4};
-                ((GridBagLayout)contentPanel.getLayout()).rowWeights = new double[] {1.0, 1.0E-4};
+                contentPanel.setLayout(new GridLayout());
 
-                //======== scrollPane1 ========
+                //======== menuBar1 ========
                 {
 
-                    //---- table1 ----
-                    table1.setModel(new DefaultTableModel(
-                        new Object[][] {
-                            {null, null},
-                            {null, null},
-                            {"Flight number", null},
-                            {null, null},
-                            {null, null},
-                            {"Departure", null},
-                            {null, null},
-                            {null, null},
-                            {"Destination", null},
-                            {null, null},
-                            {null, null},
-                            {"ETA", null},
-                            {"", null},
-                        },
-                        new String[] {
-                            "Title", "Information"
-                        }
-                    ));
+                    //======== scrollPane1 ========
                     {
-                        TableColumnModel cm = table1.getColumnModel();
-                        cm.getColumn(0).setMinWidth(45);
-                        cm.getColumn(0).setPreferredWidth(45);
-                        cm.getColumn(1).setMinWidth(40);
+
+                        //---- table1 ----
+                        table1.setModel(new DefaultTableModel(
+                            new Object[][] {
+                                {null, null},
+                                {null, null},
+                                {"Flight number", null},
+                                {null, null},
+                                {null, null},
+                                {"Departure", null},
+                                {null, null},
+                                {null, null},
+                                {"Destination", null},
+                                {null, null},
+                                {null, null},
+                                {"ETA", null},
+                                {"", null},
+                            },
+                            new String[] {
+                                "Title", "Information"
+                            }
+                        ));
+                        {
+                            TableColumnModel cm = table1.getColumnModel();
+                            cm.getColumn(0).setMinWidth(45);
+                            cm.getColumn(0).setPreferredWidth(45);
+                            cm.getColumn(1).setMinWidth(40);
+                        }
+                        table1.setPreferredScrollableViewportSize(new Dimension(450, 40));
+                        table1.setFont(new Font(".AppleSystemUIFont", Font.PLAIN, 14));
+                        table1.setFocusTraversalPolicyProvider(true);
+                        table1.setFillsViewportHeight(true);
+                        scrollPane1.setViewportView(table1);
                     }
-                    table1.setPreferredScrollableViewportSize(new Dimension(450, 40));
-                    table1.setFont(new Font(".AppleSystemUIFont", Font.PLAIN, 14));
-                    scrollPane1.setViewportView(table1);
+                    menuBar1.add(scrollPane1);
                 }
-                contentPanel.add(scrollPane1, new GridBagConstraints(1, 0, 1, 1, 0.0, 0.0,
-                    GridBagConstraints.CENTER, GridBagConstraints.BOTH,
-                    new Insets(0, 0, 0, 0), 0, 0));
-                contentPanel.add(airLine, new GridBagConstraints(2, 0, 1, 1, 0.0, 0.0,
-                    GridBagConstraints.CENTER, GridBagConstraints.BOTH,
-                    new Insets(0, 0, 0, 0), 0, 0));
+                contentPanel.add(menuBar1);
             }
             dialogPane.add(contentPanel, BorderLayout.CENTER);
 
-            //======== buttonBar ========
+            //======== panel2 ========
             {
-                buttonBar.setBorder(new EmptyBorder(12, 0, 0, 0));
-                buttonBar.setOpaque(false);
-                buttonBar.setLayout(new FlowLayout());
+                panel2.setLayout(new BorderLayout());
 
-                //---- okButton ----
-                okButton.setText(bundle.getString("okButton.text_13"));
-                okButton.addActionListener(e -> ok(e));
-                buttonBar.add(okButton);
+                //======== buttonBar ========
+                {
+                    buttonBar.setBorder(new EmptyBorder(12, 0, 0, 0));
+                    buttonBar.setOpaque(false);
+                    buttonBar.setLayout(new FlowLayout());
 
-                //---- cancelButton ----
-                cancelButton.setText(bundle.getString("cancelButton.text_18"));
-                cancelButton.addActionListener(e -> cancel(e));
-                buttonBar.add(cancelButton);
+                    //---- okButton ----
+                    okButton.setText(bundle.getString("okButton.text_13"));
+                    okButton.addActionListener(e -> ok(e));
+                    buttonBar.add(okButton);
+
+                    //---- cancelButton ----
+                    cancelButton.setText(bundle.getString("cancelButton.text_18"));
+                    cancelButton.addActionListener(e -> cancel(e));
+                    buttonBar.add(cancelButton);
+                }
+                panel2.add(buttonBar, BorderLayout.CENTER);
             }
-            dialogPane.add(buttonBar, BorderLayout.SOUTH);
+            dialogPane.add(panel2, BorderLayout.SOUTH);
 
-            //---- label2 ----
-            label2.setText(bundle.getString("label2.text_11"));
-            label2.setHorizontalAlignment(SwingConstants.CENTER);
-            label2.setFont(new Font("Lucida Grande", Font.BOLD, 40));
-            label2.setForeground(Color.black);
-            label2.setBackground(new Color(0, 127, 255, 191));
-            dialogPane.add(label2, BorderLayout.NORTH);
+            //---- testDO ----
+            testDO.setText(bundle.getString("testDO.text_26"));
+            testDO.addActionListener(e -> testDO(e));
+            dialogPane.add(testDO, BorderLayout.WEST);
+
+            //======== panel3 ========
+            {
+                panel3.setLayout(new BorderLayout());
+
+                //---- label2 ----
+                label2.setText(bundle.getString("label2.text_11"));
+                label2.setHorizontalAlignment(SwingConstants.CENTER);
+                label2.setFont(new Font("Lucida Grande", Font.BOLD, 40));
+                label2.setForeground(Color.black);
+                label2.setBackground(new Color(0, 127, 255, 191));
+                panel3.add(label2, BorderLayout.CENTER);
+
+                //======== toolBar1 ========
+                {
+
+                    //---- airLine ----
+                    airLine.setModel(new DefaultComboBoxModel<>(new String[] {
+                        "Airline"
+                    }));
+                    airLine.addItemListener(e -> airLineItemStateChanged(e));
+                    toolBar1.add(airLine);
+                }
+                panel3.add(toolBar1, BorderLayout.SOUTH);
+            }
+            dialogPane.add(panel3, BorderLayout.NORTH);
         }
         contentPane.add(dialogPane, BorderLayout.CENTER);
         setSize(900, 550);
         setLocationRelativeTo(getOwner());
         // JFormDesigner - End of component initialization  //GEN-END:initComponents
         //TODO add passenger's airline information
-        
-        airlineAdd();
         init();
     }
 
     // JFormDesigner - Variables declaration - DO NOT MODIFY  //GEN-BEGIN:variables
-    // Generated using JFormDesigner Evaluation license - Gabirella
+    // Generated using JFormDesigner Evaluation license - Gabirella Cambridge
     private JPanel dialogPane;
+    private JPanel panel1;
     private JPanel contentPanel;
+    private JMenuBar menuBar1;
     private JScrollPane scrollPane1;
     private JTable table1;
-    private JComboBox<String> airLine;
+    private JPanel panel2;
     private JPanel buttonBar;
     private JButton okButton;
     private JButton cancelButton;
+    private JButton testDO;
+    private JPanel panel3;
     private JLabel label2;
+    private JToolBar toolBar1;
+    private JComboBox<String> airLine;
     // JFormDesigner - End of variables declaration  //GEN-END:variables
 }
