@@ -32,7 +32,7 @@ public class Airline_1 extends JFrame {
     label3.setBounds(0, 0, background.getIconWidth(), background.getIconHeight());
     JPanel myPanel = (JPanel)this.getContentPane();
     myPanel.setOpaque(false);
-    this.getLayeredPane().add(label3, new Integer(Integer.MIN_VALUE));
+    this.getLayeredPane().add(label3, Integer.valueOf(Integer.MIN_VALUE));
     this.setTitle("Passenger check-in system");
     this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
     this.setVisible(true);
